--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-
 name: Test Calculator
 
 on:
@@ -25,7 +24,7 @@ jobs:
 
       - name: Run tests
         run: |
-          python -m unittest main.py  # Replace with your test execution command (e.g., pytest)
+          python -m unittest test_main.py  # Replace with your test execution command (e.g., pytest)
 
 
   deploy:
